[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "common"}]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "0.19.1"
httpx = "0.22.0"
pydantic = "1.8.2"
requests = "2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"