[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "common"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.26.0"
python-json-logger = "0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"